syntax = "proto3";
option java_multiple_files = true;
package com.magma.core.grpc_service;
import "PropertyEntity.proto";
import "ShiftEntity.proto";
import "GeoEntity.proto";
import "BatteryEntity.proto";
import "GeoTypeEnum.proto";
import "StatusEnum.proto";
import "SensorCodeEnum.proto";

import "google/protobuf/timestamp.proto";

message SensorMapHelper {
  map<int32, Shift> innerMapSensor = 1;
}

message ConnectivityMatrixHelper {
  map<string, string> innerMapConnectivityMatrix = 1;
}


message Device {
  string id = 1;
  string name = 2;
  string group = 3;
  string kitId = 4;
  string description = 5;
  int32 noOfSensors = 6;
  repeated SensorCode sensorCodes = 7;
  map<int32, Sensor> sensorMap = 8;
  map<int32, SensorMapHelper> shiftMap = 9;
  int32 noOfActuators = 10;
  repeated ActuatorCode actuatorCodes = 11;
  map<int32, Actuator> actuatorMap = 12;
  Geo geo = 13;
  Battery battery = 14;
  bool maintain = 15;
  int32 interval = 16;
  int32 intervalMin = 17;
  bool persistence = 18;
  bool offline = 19;
  Connectivity connectivity = 20;
  // map <Connectivity, ConnectivityMatrixHelper> connectivityMatrix = 21;
  Protocol protocol = 22;
  // map<Configuration, string> configurations = 23;
  Status status = 24;
  google.protobuf.Timestamp lastSeen = 25;
  google.protobuf.Timestamp creationDate = 26;
  google.protobuf.Timestamp modifiedDate = 27;
  string batchNumber = 28;
  ProductData product = 29;
  DeviceParameterConfiguration deviceParameterConfiguration = 30;
  map<string, string> references = 31;
  MagmaCodec codec = 32;
  string magmaCodecId = 33;
  string lastRawData = 34;
  string referenceName = 35;
  map<string, string> metaData = 36;
  string customPublishTopic = 37;
  string customRemoteTopic = 38;
  UserInfo createdBy = 39;
  UserInfo modifiedBy = 40;
}

message Sensor {
  string id = 1;
  string deviceId = 2;
  int32 number = 3;
  string code = 4;
  google.protobuf.Timestamp time = 5;
  string value = 6;
  map<int32, Shift> shiftMap = 7;
  google.protobuf.Timestamp creationDate = 8;
  google.protobuf.Timestamp modifiedDate = 9;
  string flag = 10;
}

message Actuator {
  string id = 1;
  string deviceId = 2;
  int32 number = 3;
  ActuatorCode code = 4;
  google.protobuf.Timestamp time = 5;
  string value = 6;
  google.protobuf.Timestamp creationDate = 7;
  google.protobuf.Timestamp modifiedDate = 8;
}

message ProductData {
  string deviceId = 1;
  string productId = 2;
  string productType = 3;
  string currentProductVersion = 4;
  string previousVersion = 5;
  bool majorVersionUpgrade = 6;
  string allProductVersionsOfDevice = 7;
  string availableProductVersions = 8;
  string currentVersionStatus = 9;
  string actionBy = 10; // Optional field
  string date = 11; // Optional field
  repeated OTAUpgradeHistory otaHistory = 12;
}

message OTAUpgradeHistory {
  string actionBy = 1;
  google.protobuf.Timestamp updatedDate = 2;
  string currentVersion = 3;
  string previousVersion = 4;
}

message DeviceParameterConfiguration {
  string device = 1;
  ProductType productType = 2;
  string versionNum = 3;
  DeviceCategory deviceCategory = 4;
  repeated ProductParameter remoteConfigurations = 5;
  string joinParameters = 6; // need to change as map + list
  repeated DeviceParameterConfigurationHistory updateHistory = 7;
  string serverIpAddress = 8;
}

message ProductParameter {
  string parameterCategory = 1;
  string parameter = 2;
  string id = 3;
  string inputType = 4;
  string format = 5;
  string defaultValue = 6;
  repeated string defaultValues = 7;
}

message DeviceParameterConfigurationHistory {
  string actionBy = 1;
  google.protobuf.Timestamp updatedDate = 2;
  map<string, string> networkAndCommiunication = 3;
  map<string, string> topicFormat = 4;
  map<string, string> messageFormat = 5;
}

message MagmaCodec {
  string id = 1;
  string codecName = 2;
  string decoderFileName = 3;
  string decoderFileContent = 4;
  string decoderFileExtension = 5;
  bool decoderStatus = 6;
  string encoderFileName = 7;
  string encoderFileContent = 8;
  string encoderFileExtension = 9;
  bool encoderStatus = 10;
  string scriptFormat = 11;
}

message UserInfo {
  string id = 1;
  string username = 2;
  string lastName = 3;
}







message ActuatorCode {
  enum ActuatorCodeEnum {
    NONE = 0;
    S = 1; // Solenoid
    M = 2; // Motor
    B = 3; // Buzzer
    T = 4; // Trigger
    X = 5; // Test X
    Y = 6; // Test Y
  }
  ActuatorCodeEnum actuatorCode = 1;
}

message Connectivity {
  enum ConnectivityEnum {
    NONE = 0;
    GSM = 1;        // GSM
    WIFI = 2;       // WIFI
    NRF = 3;        // NRF
    BLUETOOTH = 4;  // BLUETOOTH
    LORA = 5;       // LORA
  }
  ConnectivityEnum connectivity = 1;
}

message Protocol {
  enum ProtocolEnum {
    NONE = 0;
    HTTP = 1;   // HTTP
    HTTPS = 2;  // HTTPS
    MQTT = 3;   // MQTT
    TCP = 4;    // TCP
  }
  ProtocolEnum protocol = 1;
}

message Configuration {
  enum ConfigurationEnum {
    NONE = 0;
    CT = 1;     // Current Sensor Threshold
    X = 2;      // Test X
    Y = 3;      // Test Y
  }
  ConfigurationEnum configuration = 1;
}

message ProductType {
  enum ProductTypeEnum {
    NONE = 0;
    DIGI_Lora = 1;
    DIGI_Controller = 2;
    DIGI_Plant = 3;
  }
  ProductTypeEnum productType = 1;
}

message DeviceCategory {
  enum DeviceCategoryEnum {
    NONE = 0;
    SENSOR_DEVICE = 1;
    SLAVE_DEVICE = 2;
    MASTER_DEVICE = 3;
    CONTROL_DEVICE = 4;
    SOLENOID_DEVICE = 5;
  }
  DeviceCategoryEnum deviceCategory = 1;
}
