syntax = "proto3";
option java_multiple_files = true;
package com.magma.core.grpc_service;
import "GeoTypeEnum.proto";


message Geo {
  string id = 1;
  string kitId = 2;
  GeoType type = 3;
  string time = 4;
  double lat = 5;
  double lng = 6;
  map<string, string> relativeLocation = 7;
}